--- a/pipeline/pl_append_variable.json
+++ b/pipeline/pl_append_variable.json
@@ -52,7 +52,7 @@
 						"type": "Expression"
 					},
 					"condition": {
-						"value": "@startswith(item().name, 'f')",
+						"value": "@startswith(item().name, 'e')",
 						"type": "Expression"
 					}
 				}
